--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "vite-plugin-eslint": "^1.8.1",
         "vue": "^3.2.41",
         "vue-tsc": "^1.8.13"
+    },
+    "dependencies": {
+        "@vueuse/core": "^10.5.0"
     }
 }
