--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "vue-tsc": "^1.8.13"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.16",
+        "@heroicons/vue": "^2.0.18",
         "@vueuse/core": "^10.5.0"
     }
 }
